kube-objects/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-world-network-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
    - Ingress
    - Egress
